Include other user attributes

--- a/register.html
+++ b/register.html
@@ -44,7 +44,9 @@
               <input type="email" id="emailInputRegister" placeholder="Email" pattern=".*" required>
               <input type="password" id="passwordInputRegister" placeholder="Password" pattern=".*" required>
               <input type="password" id="password2InputRegister" placeholder="Confirm Password" pattern=".*" required>
-
+              <input type="text" id="phoneInputRegister" placeholder="Phone" pattern=".*" required>
+              <input type="text" id="givenNameInputRegister" placeholder="Given Name" pattern=".*" required>
+              <input type="text" id="familyNameInputRegister" placeholder="Family Name" pattern=".*" required>
               <input type="submit" value="Let's Ryde">
             </form>
         </section>
