--- a/register.html
+++ b/register.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/message.css">
+        <link rel="stylesheet" href="css/ride.css">
     </head>
     <body>
         <!--[if lt IE 7]>
